# inD-engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  SoundBuffer.cpp  Utilities.h  VulkanRenderer.cpp  VulkanRenderer.h  bootstrap.sh  main.cpp
.github/: FUNDING.yml
.github/workflows/: cmake.yml
cmake/: utils.cmake
lib/: CMakeLists.txt
lib/assimp/: CMakeLists.txt
lib/cereal/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glfw/: CMakeLists.txt
lib/glm/: CMakeLists.txt
lib/imgui/: CMakeLists.txt
lib/openal-soft/: CMakeLists.txt
lib/rttr/: CMakeLists.txt
lib/spdlog/: CMakeLists.txt
lib/vulkan/: CMakeLists.txt  _inD_vulkan.cpp
src/: CMakeLists.txt
